# YenSi-ChiefOps

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  prompt.md  technical.md
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  main.py  redis_client.py
backend/app/ai/: adapter.py  cli_adapter.py  factory.py  mock_adapter.py  openrouter_adapter.py
backend/app/ai/prompts/: base.py  conversation.py  intent.py  people.py  project.py  report.py  widget.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: alerts.py  conversation.py  coo_briefings.py  dashboards.py  health.py  ingestion.py  people.py  project_files.py  projects.py  reports.py  settings.py  websocket.py  widgets.py
backend/app/citex/: client.py  indexer.py  models.py  project_scope.py
backend/app/core/: exceptions.py  logging.py
backend/app/db/: indexes.py
backend/app/models/: __init__.py  alert.py  base.py  conversation.py  dashboard.py  ingestion.py  person.py  project.py  report.py  settings.py
backend/app/services/advisor/: technical_advisor.py
backend/app/services/alerts/: alert_engine.py  service.py
backend/app/services/briefing/: briefing_generator.py
backend/app/services/conversation/: intent.py  project_context.py  service.py  streaming.py
backend/app/services/dashboards/: default_generator.py
backend/app/services/ingestion/: detector.py  drive.py  hasher.py  jira_csv.py  orchestrator.py  project_files.py  slack_admin.py  slack_api.py  slack_manual.py
backend/app/services/insights/: __init__.py  semantic.py
backend/app/services/memory/: assembler.py  compactor.py  hard_facts.py  manager.py
backend/app/services/people/: corrections.py  pipeline.py  resolver.py  role_detector.py  service.py
backend/app/services/privacy/: chunk_audit.py  pii_redactor.py
backend/app/services/projects/: analyzer.py  citex_sync.py  feasibility.py  gaps.py  health.py  service.py
backend/app/services/reports/: editor.py  generator.py  pdf_export.py  service.py
backend/app/services/summarization/: coo_aggregator.py  coo_pdf_export.py  file_summarizer.py  pipeline.py
backend/app/services/widgets/: cache.py  query_engine.py  service.py  spec_generator.py
backend/app/templates/reports/: base.html
backend/app/templates/reports/sections/: card_list.html  chart.html  checklist.html  metrics_grid.html  narrative.html  table.html
backend/tests/: conftest.py
backend/tests/integration/test_api/: test_conversation_api.py  test_health.py  test_ingestion_api.py  test_people_api.py  test_projects_api.py  test_projects_semantic_api.py
backend/tests/unit/test_ai/: test_adapters.py
backend/tests/unit/test_citex/: test_client.py  test_project_scope.py
backend/tests/unit/test_models/: test_person.py  test_project.py
backend/tests/unit/test_services/: test_ingestion.py  test_memory.py  test_memory_manager.py  test_people.py  test_privacy.py  test_reports.py  test_semantic_insights.py  test_widgets.py
data/: slack-capture-ara-askerisa-2026-02-08.json  slack-capture-ara-salesforce-dev-2026-02-08.json
docs/: 00-README.md  01-PRD.md  02-ARCHITECTURE.md  03-DATA-MODELS.md  04-MEMORY-SYSTEM.md  05-CITEX-INTEGRATION.md  06-AI-LAYER.md  07-REPORT-GENERATION.md  08-FILE-INGESTION.md  09-PEOPLE-INTELLIGENCE.md  10-DASHBOARD-AND-WIDGETS.md  10B-WIDGET-TYPES-AND-COMPONENTS.md  11-IMPLEMENTATION-PLAN.md  11B-IMPLEMENTATION-PLAN-CONTINUED.md  12-UI-UX-DESIGN.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  (+2 more)
(+107 files in other folders)
