[project]
name = "chiefops-backend"
version = "0.1.0"
description = "ChiefOps AI-powered project management backend"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate
    "RUF",    # ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
]
ignore = [
    "S101",     # allow assert in tests
    "S104",     # allow binding to 0.0.0.0
    "S110",     # allow try-except-pass (used for best-effort cleanup)
    "B008",     # allow function calls in defaults (FastAPI Depends)
    "B904",     # allow raise without from in except (cleaner for wrapping)
    "A003",     # allow shadowing builtins on classes (id, type)
    "ARG001",   # allow unused function arguments (abstract methods, stubs)
    "ARG002",   # allow unused method arguments
    "E501",     # let formatter handle line length
    "E741",     # allow ambiguous variable names (l, O, I)
    "N818",     # allow exception naming convention flexibility
    "ISC001",   # conflicts with formatter
    "RUF001",   # allow ambiguous unicode characters in strings
    "RUF012",   # allow mutable class variables without ClassVar
    "ASYNC230", # async file I/O not required for our use patterns
    "DTZ007",   # allow naive datetime (UTC-enforced elsewhere)
    "SIM115",   # context manager not always needed for open()
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ARG002", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "motor.*",
    "redis.*",
    "weasyprint.*",
    "openpyxl.*",
    "docx.*",
    "aiofiles.*",
    "sse_starlette.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require MongoDB/Redis)",
    "e2e: End-to-end tests (require full stack)",
    "slow: Slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
